# github-readme-youtube-cards

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Procfile  README.md  action.py  action.yml  pyproject.toml  requirements-action.txt  requirements-dev.txt  requirements.txt  tox.ini  vercel.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  doc.yml  feature_request.yml  question.yml
.github/workflows/: pre-commit.yml  python-lint.yml  python-test.yml  youtube-cards.yml  youtube-workflow.yml
api/: __init__.py  exceptions.py  index.py  utils.py  validate.py
api/locale/: ar.yml  ba.yml  bn.yml  de.yml  en-us.yml  en.yml  es.yml  fa.yml  fr.yml  hd.yml  he.yml  hi.yml  hu.yml  id.yml  it.yml  ja.yml  ko.yml  mi.yml  pl.yml  pt.yml  sv.yml  ur.yml
api/static/css/: style.css  toggle-dark.css
api/static/js/: toggle-dark.js
api/templates/: index.html
api/templates/resources/: roboto.css
tests/: conftest.py  test_action.py  test_app.py  test_locales.py  test_utils.py  test_validate.py
web/: app.py  utils.py  validate.py
