[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

[project]
name = "github-readme-youtube-cards"
authors = [{name = "Jonah Lawrence", email = "jonah@freshidea.com"}]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
py_version = 310
line_length = 100
combine_as_imports = true
filter_files = true

[tool.taskipy.tasks]
black = { cmd = "task lint black", help = "Run black" }
isort = { cmd = "task lint isort", help = "Run isort" }
lint = { cmd = "pre-commit run --all-files", help = "Check all files for linting errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Install the precommit hook" }
pyright = { cmd = "pyright", help = "Run pyright" }

[tool.pyright]
typeCheckingMode = "basic"
include = [
    "api",
    "tests",
    "*.py",
]
pythonVersion = "3.10"
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportPropertyTypeMismatch = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportUnknownLambdaType = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportSelfClsParameterName = true
reportUnsupportedDunderAll = true
reportUnusedVariable = true
reportUnnecessaryComparison = true
reportUnnecessaryTypeIgnoreComment = true
