[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[project]
name = "github-readme-youtube-cards"
version = "1.7.0"
description = "Workflow for displaying recent YouTube videos as SVG cards in your readme"
authors = [{name = "Jonah Lawrence", email = "jonah@freshidea.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.1.1",
    "gunicorn>=20.1.0",
    "orjson==3.11.5",
    "python-i18n[yaml]==0.3.9",
    "Babel==2.17.0",
]

[project.optional-dependencies]
dev = [
    "tox",
    "pytest",
    "black",
    "pre-commit",
    "taskipy",
    "pyright",
]
action = [
    "feedparser==6.0.11",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
py_version = 311
line_length = 100
combine_as_imports = true
filter_files = true

[tool.taskipy.tasks]
black = { cmd = "task lint black", help = "Run black" }
isort = { cmd = "task lint isort", help = "Run isort" }
lint = { cmd = "pre-commit run --all-files", help = "Check all files for linting errors" }
precommit = { cmd = "pre-commit install --install-hooks", help = "Install the precommit hook" }
pyright = { cmd = "pyright", help = "Run pyright" }

[tool.pyright]
typeCheckingMode = "basic"
include = [
    "api",
    "tests",
    "*.py",
]
pythonVersion = "3.11"
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
reportPropertyTypeMismatch = true
reportDuplicateImport = true
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true
reportUnknownLambdaType = true
reportInvalidTypeVarUse = true
reportUnnecessaryCast = true
reportSelfClsParameterName = true
reportUnsupportedDunderAll = true
reportUnusedVariable = true
reportUnnecessaryComparison = true
reportUnnecessaryTypeIgnoreComment = true
